--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     </head>
     <body>
     <style>
-        body {
+        /body {
             background-image: url("https://upload.wikimedia.org/wikipedia/commons/thumb/4/41/Angkor_Wat.jpg/1280px-Angkor_Wat.jpg" );
             background-size: cover;
   background-repeat:no-repeat;
@@ -35,7 +35,7 @@
         }
         .Animals{
             color: rgb(255, 255, 255);
-        }
+        }/
     </style>
         <h1> THE PERFECT TRIP</h1>
         <h2><em>CAMBOYA</em></h2>
