--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
     <head>
         <meta charset="utf-8">
         <title>Derivado de "Proyecto: página web de viajes"</title>
+        <link rel="stylesheet" type="text/css" href="https://Eleve11n.github.io/travel.css">
     </head>
     <body>
     <style>
