--- a/index.html
+++ b/index.html
@@ -4,41 +4,41 @@
         <meta charset="utf-8">
         <title>Derivado de "Proyecto: página web de viajes"</title>
         <link rel="stylesheet" type="text/CSS" href="https://Eleve11n.github.io/Travel.css">
+            <style>
+            /*body {
+                background-image: url("https://upload.wikimedia.org/wikipedia/commons/thumb/4/41/Angkor_Wat.jpg/1280px-Angkor_Wat.jpg" );
+                background-size: cover;
+      background-repeat:no-repeat;
+      background-position: center center;
+            }
+            h1{
+                color: rgb(0, 4, 120);
+            }
+            h2{
+                color: rgb(0, 43, 255);
+            }
+            h3{
+                color: rgb(255, 230, 0);
+            }
+            ol{
+               color: rgb(255, 0, 255);
+            }
+            .CommonInformation{
+                color: rgb(189, 189, 189);
+            }
+            }
+            .Top3AmazingPlaces1{
+                color: rgb(255, 0, 255);
+            }
+            .Top3AmazingPlaces2{
+                color: rgb(255, 255, 255);
+            }
+            .Animals{
+                color: rgb(255, 255, 255);
+            }*/
+        </style>
     </head>
     <body>
-    <style>
-        /*body {
-            background-image: url("https://upload.wikimedia.org/wikipedia/commons/thumb/4/41/Angkor_Wat.jpg/1280px-Angkor_Wat.jpg" );
-            background-size: cover;
-  background-repeat:no-repeat;
-  background-position: center center;
-        }
-        h1{
-            color: rgb(0, 4, 120);
-        }
-        h2{
-            color: rgb(0, 43, 255);
-        }
-        h3{
-            color: rgb(255, 230, 0);
-        }
-        ol{
-           color: rgb(255, 0, 255);
-        }
-        .CommonInformation{
-            color: rgb(189, 189, 189);
-        }
-        }
-        .Top3AmazingPlaces1{
-            color: rgb(255, 0, 255);
-        }
-        .Top3AmazingPlaces2{
-            color: rgb(255, 255, 255);
-        }
-        .Animals{
-            color: rgb(255, 255, 255);
-        }*/
-    </style>
         <h1> THE PERFECT TRIP</h1>
         <h2><em>CAMBOYA</em></h2>
 
@@ -50,24 +50,24 @@ Cambodia has greatly improved its tourism infrastructure and is now an easy coun
        <h3>Top 3 Amazing Places </h3>
     
     <ol>
-        <strong><li class="Top3AmazingPlaces1">Phnom Phen </li></strong>
-        <p class="Top3AmazingPlaces2"> Phnom Penh is the most populous city and capital of Cambodia since French colonisation. It is also the economic, industrial, political, cultural and diplomatic centre of the country. The metropolitan area is home to some 2.2 million inhabitants. </p>
-        <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/5/5f/Wat_Phnom-Phnom_Penh-Cambodia.jpg/200px-Wat_Phnom-Phnom_Penh-Cambodia.jpg">
+        <li class="Top3AmazingPlaces1"><strong>Phnom Phen </strong> </li>
+        <li><p class="Top3AmazingPlaces2"> Phnom Penh is the most populous city and capital of Cambodia since French colonisation. It is also the economic, industrial, political, cultural and diplomatic centre of the country. The metropolitan area is home to some 2.2 million inhabitants. </p></li>
+        <li><img alt src="https://upload.wikimedia.org/wikipedia/commons/thumb/5/5f/Wat_Phnom-Phnom_Penh-Cambodia.jpg/200px-Wat_Phnom-Phnom_Penh-Cambodia.jpg"></li>
         
-       <strong><li class="Top3AmazingPlaces1">Angkor Wat</li></strong>
-        <p class="Top3AmazingPlaces2">Angkor Wat , sometimes also written Angkor Vat, is the largest and also the best preserved of the Hindu temples that make up the Angkor settlement. It is considered to be the largest religious structure ever built, and one of the most important archaeological treasures in the world.</p>
-        <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/5/5d/Angkor-Wat-from-the-air.JPG/220px-Angkor-Wat-from-the-air.JPG">
-        <strong><li class="Top3AmazingPlaces1">Siem Reap</li></strong>
-        <p class="Top3AmazingPlaces2"> Siem Reap is the capital of Siem Reap Province in Cambodia. It is located in the heart of the province, at the crossroads of the National Highway linking the capital, Phnom Penh, and Kompung Thom with Sisophon. From the town, the National Highway, which leads to the north of the country, starts from the town.</p> 
-         <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/e/e1/TonleSap2.jpg/220px-TonleSap2.jpg">
+       <li class="Top3AmazingPlaces1"><strong>Angkor Wat</strong></li>
+        <li><p class="Top3AmazingPlaces2">Angkor Wat , sometimes also written Angkor Vat, is the largest and also the best preserved of the Hindu temples that make up the Angkor settlement. It is considered to be the largest religious structure ever built, and one of the most important archaeological treasures in the world.</p></li>
+        <li><img alt src="https://upload.wikimedia.org/wikipedia/commons/thumb/5/5d/Angkor-Wat-from-the-air.JPG/220px-Angkor-Wat-from-the-air.JPG"></li>
+        <li class="Top3AmazingPlaces1"> <strong> Siem Reap </strong> </li>
+        <li><p class="Top3AmazingPlaces2"> Siem Reap is the capital of Siem Reap Province in Cambodia. It is located in the heart of the province, at the crossroads of the National Highway linking the capital, Phnom Penh, and Kompung Thom with Sisophon. From the town, the National Highway, which leads to the north of the country, starts from the town.</p> </li>
+         <li><img alt src="https://upload.wikimedia.org/wikipedia/commons/thumb/e/e1/TonleSap2.jpg/220px-TonleSap2.jpg"></li>
     </ol>
     <h3>Animals</h3>
     <p class="Animals">Cambodia is home to all kinds of animals, some of which are becoming increasingly rare, such as the Javan rhino, the Asian elephant, the Ko Prey, the wild ox, the water buffalo, the tiger and the sao la, an antelope. In the country's forests there are still bears, buffalo, leopards, monkeys and snakes.<br>
 Not forgetting the crocodiles, which, because of the interest in their meat and skin, are mainly raised on farms.<br>
 If you are a bird enthusiast, you must go to Cambodia, as many species live here. You can see cranes, airons, sparrowhawks, hawks, falcons, kites, eagles, vultures, peacocks, quails, woodcock, owls, herons, pelicans, wild ducks, cormorants.</p>
-    <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/7/7d/Cambodia._Water_buffaloes._img_01.jpg/120px-Cambodia._Water_buffaloes._img_01.jpg" width="200" height="200">
-    <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/f/f2/Rhynchodemus_ochroleucus_2.jpg/120px-Rhynchodemus_ochroleucus_2.jpg" width="200" height="200">
-    <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/7/75/Monkey_in_the_jungle.jpg/230px-Monkey_in_the_jungle.jpg" width="200" height="200">
-    <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/5/59/Cambodia._Water_buffaloes._img_02.jpg/120px-Cambodia._Water_buffaloes._img_02.jpg" width="200" height="200">
+    <img alt src="https://upload.wikimedia.org/wikipedia/commons/thumb/7/7d/Cambodia._Water_buffaloes._img_01.jpg/120px-Cambodia._Water_buffaloes._img_01.jpg" width="200" height="200">
+    <img alt src="https://upload.wikimedia.org/wikipedia/commons/thumb/f/f2/Rhynchodemus_ochroleucus_2.jpg/120px-Rhynchodemus_ochroleucus_2.jpg" width="200" height="200">
+    <img alt src="https://upload.wikimedia.org/wikipedia/commons/thumb/7/75/Monkey_in_the_jungle.jpg/230px-Monkey_in_the_jungle.jpg" width="200" height="200">
+    <img alt src="https://upload.wikimedia.org/wikipedia/commons/thumb/5/59/Cambodia._Water_buffaloes._img_02.jpg/120px-Cambodia._Water_buffaloes._img_02.jpg" width="200" height="200">
     </body>
 </html>
